--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-QN5S48G7PJ"></script>
       <script>
         var doNotTrack = false;
@@ -31,7 +31,7 @@
   <meta itemprop="name" content="Z3KAIx0">
   <meta itemprop="description" content="💌 Contact Have a question, idea, or just want to say hi?
 I’d love to hear from you. 📧 z3kaix0.offsec@gmail.com">
-  <meta itemprop="wordCount" content="20"><meta property="og:url" content="http://localhost:1313/contact/">
+  <meta itemprop="wordCount" content="20"><meta property="og:url" content="https://koustubha.com/contact/">
   <meta property="og:site_name" content="Z3KAIx0">
   <meta property="og:title" content="Z3KAIx0">
   <meta property="og:description" content="💌 Contact Have a question, idea, or just want to say hi?
@@ -62,7 +62,7 @@ I’d love to hear from you. 📧 z3kaix0.offsec@gmail.com">
         "name":  null ,},
     "mainEntityOfPage": {
       "@type": "WebPage",
-      "@id": "http://localhost:1313/contact/"
+      "@id": "https://koustubha.com/contact/"
     },
     "publisher": {
       "@type": "Organization",
@@ -70,21 +70,21 @@ I’d love to hear from you. 📧 z3kaix0.offsec@gmail.com">
       "description": "",
       "logo": {
         "@type": "ImageObject",
-        "url": "http://localhost:1313/favicon.ico"
+        "url": "https://koustubha.com/favicon.ico"
       }
     }
 }
 </script><title></title>
-<link rel="stylesheet dns-prefetch preconnect preload prefetch" as="style" media="screen" href="http://localhost:1313/css/style.min.65788784967ef394e528967eed8c63658368c6c4d417053ce77fd6c5ba25d364.css" integrity="sha256-ZXiHhJZ+85TlKJZ+7YxjZYNoxsTUFwU853/Wxbol02Q=" crossorigin="anonymous">
+<link rel="stylesheet dns-prefetch preconnect preload prefetch" as="style" media="screen" href="https://koustubha.com/css/style.min.65788784967ef394e528967eed8c63658368c6c4d417053ce77fd6c5ba25d364.css" integrity="sha256-ZXiHhJZ+85TlKJZ+7YxjZYNoxsTUFwU853/Wxbol02Q=" crossorigin="anonymous">
   </head>
 <body id="page">
   	<header id="site-header">
 		<div class="hdr-wrapper section-inner">
 			<div class="hdr-left">
 				<div class="site-branding">
-					<a href="http://localhost:1313/">Z3KAIx0</a>
+					<a href="https://koustubha.com/">Z3KAIx0</a>
 				</div>
-				<nav class="site-nav hide-in-mobile"><a href="http://localhost:1313/">🏡 Home</a><a href="http://localhost:1313/posts/">📘 Blog</a><a href="http://localhost:1313/notes/">🗒️ Notes</a><a href="http://localhost:1313/about/">🗿 About</a><a href="http://localhost:1313/contact/">💌 Contact</a></nav>
+				<nav class="site-nav hide-in-mobile"><a href="https://koustubha.com/">🏡 Home</a><a href="https://koustubha.com/posts/">📘 Blog</a><a href="https://koustubha.com/notes/">🗒️ Notes</a><a href="https://koustubha.com/about/">🗿 About</a><a href="https://koustubha.com/contact/">💌 Contact</a></nav>
 			</div>
 			<div class="hdr-right hdr-icons">
 				<span class="hdr-links hide-in-mobile"><a href="https://github.com/Koustubha-naik" target="_blank" rel="noopener me" title="Github"><svg xmlns="http://www.w3.org/2000/svg" class="feather" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -117,11 +117,11 @@ I’d love to hear from you. 📧 z3kaix0.offsec@gmail.com">
 	</header>
 	<div id="mobile-menu" class="animated fast">
 		<ul>
-			<li><a href="http://localhost:1313/">🏡 Home</a></li>
-			<li><a href="http://localhost:1313/posts/">📘 Blog</a></li>
-			<li><a href="http://localhost:1313/notes/">🗒️ Notes</a></li>
-			<li><a href="http://localhost:1313/about/">🗿 About</a></li>
-			<li><a href="http://localhost:1313/contact/">💌 Contact</a></li>
+			<li><a href="https://koustubha.com/">🏡 Home</a></li>
+			<li><a href="https://koustubha.com/posts/">📘 Blog</a></li>
+			<li><a href="https://koustubha.com/notes/">🗒️ Notes</a></li>
+			<li><a href="https://koustubha.com/about/">🗿 About</a></li>
+			<li><a href="https://koustubha.com/contact/">💌 Contact</a></li>
 		</ul>
 	</div>
 
@@ -157,9 +157,9 @@ I’d love to hear from you. 📧 z3kaix0.offsec@gmail.com">
 
   <footer id="site-footer" class="section-inner thin animated fadeIn faster">
 <p>
-	&copy; 2025 <a href="http://localhost:1313/">Z3KAIx0</a>
+	&copy; 2025 <a href="https://koustubha.com/">Z3KAIx0</a>
 	&#183; &#183; Made with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a>
 	&#183; Theme <a href="https://github.com/1bl4z3r/hermit-V2" target="_blank" rel="noopener">Hermit-V2</a></p></footer>
-<script async src="http://localhost:1313/js/bundle.min.c7c384e4d29d192bbac6811ae4660bb01767194a5bea56baca77e8260f93ea16.js" integrity="sha256-x8OE5NKdGSu6xoEa5GYLsBdnGUpb6la6ynfoJg+T6hY=" crossorigin="anonymous"></script>
+<script async src="https://koustubha.com/js/bundle.min.c7c384e4d29d192bbac6811ae4660bb01767194a5bea56baca77e8260f93ea16.js" integrity="sha256-x8OE5NKdGSu6xoEa5GYLsBdnGUpb6la6ynfoJg+T6hY=" crossorigin="anonymous"></script>
 </body>
 </html>
